# soin

./: .gitignore  README.md  demo_pro.py  pyproject.toml
src/soin/: __init__.py
src/soin/core/: __init__.py  manager.py
src/soin/exceptions/: __init__.py
src/soin/models/: prompt.py
src/soin_ai/: __init__.py
src/soin_ai/exceptions/: base.py
src/soin_ai/models/: __init__.py
