[project]
name = "soin"
version = "0.1.0"
description = "Simple Optimized Instruction Network: A nimble prompt management library."
readme = "README.md"
authors = [
    { name = "FernandoSSI", email = "fernandosi2005@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0", # Linter e formatter ultra-rápido
]